# types-MaterialX

./: pyproject.toml
MaterialX-stubs/: PyMaterialXCore.pyi  PyMaterialXFormat.pyi  PyMaterialXGenGlsl.pyi  PyMaterialXGenMdl.pyi  PyMaterialXGenMsl.pyi  PyMaterialXGenShader.pyi  PyMaterialXGenSlang.pyi  PyMaterialXRender.pyi  PyMaterialXRenderGlsl.pyi  PyMaterialXRenderOsl.pyi  __init__.pyi
