[build-system]
requires = [
  "setuptools>=77",
  "wheel",
  "packaging>=24.2",
  "mypy>=1.0",
  "MaterialX>=1.39.4"
]
build-backend = "build_backend"
backend-path = [ "." ]

[project]
name = "types-MaterialX"
version = "0.1.39.5"
description = "PEP 561 type stubs for MaterialX"
readme = "README.md"
authors = [
  { name = "Bernard Kwok", email = "kwokcb@gmail.com" }
]
maintainers = [
  { name = "Bernard Kwok", email = "kwokcb@gmail.com" }
]
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
  "MaterialX>=1.39.4",
  "mypy>=1.0"
]
keywords = ["typing", "stubs", "PEP561", "MaterialX", "types"]
classifiers = [
  "Programming Language :: Python",
  "Typing :: Stubs Only",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/kwokcb/types-MaterialX"
Repository = "https://github.com/kwokcb/types-MaterialX"
Issues = "https://github.com/kwokcb/types-MaterialX/issues"

[project.optional-dependencies]
dev = ["build>=1.2.0", "twine>=5.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["MaterialX-stubs*"]

[tool.setuptools.package-data]
"*" = ["**/*.pyi", "py.typed"]


